correction de leement collapse pour qu il soit reutilisable

--- a/src/components/Collapse/Collapse.css
+++ b/src/components/Collapse/Collapse.css
@@ -20,7 +20,7 @@
     transform: rotateX(180deg);
 }
 
-.collapse-description {
+.collapse-content {
     width: 100%;
     background-color: #F6F6F6;
     border-radius: 0 0 5px 5px;
